--- a/blog-preview-card-main/development/style.css
+++ b/blog-preview-card-main/development/style.css
@@ -9,3 +9,23 @@
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: hsl(47, 88%, 63%);
+}
+
+img {
+  display: flex;
+}
+
+.blog_card {
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 10px;
+}
+
+.status {
+  border: 3px solid hsl(47, 88%, 63%);
+}
